Pequena correção em PagamentoPresenter